Code function Export Request